--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,19 @@
-#content {
+#titulo{
+  display: flex;
+  justify-content: center;
+  font-family: monospace;
+  
+}
+
+.content_table {
     font-family: arial, sans-serif;
+    width: auto;
+    display: flex;
+    justify-content: center;
+  }
+
+  #content {
     border-collapse: collapse;
-    width: 100%;
-    display: block;
   }
 
   
@@ -11,8 +22,21 @@
     text-align: left;
     padding: 8px;
   }
+
+  th {
+    background-color: rgb(93, 91, 91);
+    color: white;
+  }
+
+  
   
   tr:nth-child(even) {
     background-color: #bdccef;
+  }
+
+  .btns{
+    display: flex;
+    justify-content: center;
+    padding: 10px;
   }
 
